# pearlarr

./: .dockerignore  .gitignore  .markdownlint-cli2.yaml  .pre-commit-config.yaml  CHANGELOG.md  CHANGES.rst  CODEOWNERS  CONTRIBUTING.md  Dockerfile  README.md  REFACTOR_PLAN.md  RELEASING.md  SECURITY.md  docker-compose.example.yml  lychee.toml  pyproject.toml  seadexarr.py
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml  zizmor.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yaml  links.yaml  publish.yaml  publish_docker.yaml  publish_pypi.yaml  release.yaml  release_prepare.yaml
docker/: entrypoint.sh
docs/: architecture.md  cli.md  configuration.md  deployment.md  getting-started.md  output.md  troubleshooting.md
pearlarr/: __init__.py  __main__.py  anibridge.py  anilist_client.py  anilist_gateway.py  anime_filter.py  arr_activity.py  arr_http.py  boot_flow.py  bootstrap.py  cache.py  cli.py  config.py  config_migrations.py  config_sample.yml  console_caps.py  coverage.py  discord.py  env_registry.py  grab_pipeline.py  import_wait.py  json_narrow.py  log.py  manual_import.py  mapping_store.py  mappings.py  notify.py  paths.py  planner.py  protocols.py  radarr_client.py  replay.py  reporter.py  run_loop.py  run_services.py  runlock.py  seadex_filter.py  seadex_gateway.py  seadex_radarr.py  seadex_sonarr.py  (+12 more)
pearlarr/modules/: __init__.py  anibridge.py  anilist_client.py  anilist_gateway.py  arr_activity.py  arr_http.py  boot_flow.py  bootstrap.py  cache.py  cli.py  config.py  config_migrations.py  config_sample.yml  console_caps.py  coverage.py  discord.py  env_registry.py  grab_pipeline.py  import_wait.py  json_narrow.py  log.py  manual_import.py  mapping_store.py  mappings.py  notify.py  paths.py  planner.py  protocols.py  radarr_client.py  reporter.py  run_loop.py  run_services.py  runlock.py  seadex_filter.py  seadex_gateway.py  seadex_radarr.py  seadex_sonarr.py  seadex_types.py  sonarr_client.py  sonarr_episodes.py  (+9 more)
pearlarr/modules/output/: __init__.py  boot_region.py  breadcrumbs.py  bridge.py  events.py  hub.py  recording.py  rich_renderer.py  runtime.py  scan_lines.py  scopes.py  textline.py  trace.py  wait_lines.py  wait_region.py
pearlarr/output/: __init__.py  boot_region.py  breadcrumbs.py  bridge.py  cli_surface.py  events.py  hub.py  live_region.py  recording.py  rich_renderer.py  runtime.py  scan_lines.py  scopes.py  textline.py  trace.py  wait_lines.py  wait_region.py
schemas/: README.md  anibridge.mappings.schema.json  config.schema.json
scripts/: changelog.sh  gen_docs.py  release.sh  sample_grab_post.py
scripts/demo/: config.yml  demo.tape  demo_mocks.py  make_fixtures.py  record.sh
scripts/demo/fixtures/: episodes_301_frieren.json  episodes_302_bebop.json  episodes_303_fmab.json  series_demo.json
seadex_sonarr/: __init__.py
seadex_sonarr/modules/: anilist.py  discord.py  seadex_sonarr.py
seadexarr/: __init__.py  __main__.py
seadexarr/modules/: __init__.py  anibridge.py  anilist.py  anilist_client.py  anilist_gateway.py  arr_activity.py  arr_http.py  boot_flow.py  boot_view.py  bootstrap.py  cache.py  cli.py  config.py  config_sample.yml  console_caps.py  coverage.py  discord.py  env_registry.py  grab_pipeline.py  import_wait.py  log.py  manual_import.py  mapping_store.py  mappings.py  notify.py  paths.py  planner.py  protocols.py  radarr_client.py  reporter.py  run_loop.py  run_services.py  runlock.py  seadex_arr.py  seadex_filter.py  seadex_gateway.py  seadex_radarr.py  seadex_sonarr.py  seadex_types.py  sonarr_client.py  (+10 more)
seadexarr/modules/output/: __init__.py  boot_region.py  breadcrumbs.py  bridge.py  events.py  hub.py  legacy_echo.py  live_region.py  recording.py  rich_renderer.py  runtime.py  scan_lines.py  scopes.py  textline.py  trace.py  wait_lines.py  wait_region.py
stubs/: arrapi.pyi  discordwebhook.pyi
stubs/arrapi/: exceptions.pyi
tests/: __init__.py  builders.py  conftest.py  fakes.py  http_mock.py  test_anilist.py  test_anilist_client.py  test_anilist_gateway.py  test_arr_activity.py  test_arr_http.py  test_boot_flow.py  test_boot_view.py  test_boundary_parity.py  test_cache.py  test_cache_parity.py  test_cached_skip.py  test_cli.py  test_cli_json.py  test_config.py  test_config_migrations.py  test_console_caps.py  test_construction.py  test_coverage.py  test_discord.py  test_docs_cli.py  test_docs_config.py  test_docs_output.py  test_docs_troubleshooting.py  test_docstring_floor.py  test_download_planner.py  test_e2e_fallback.py  test_e2e_smoke.py  test_env_overrides.py  test_get_ep_list.py  test_grab_pipeline.py  test_import_wait.py  test_log_format.py  test_logging_ban.py  test_manual_import.py  test_manual_import_fixtures.py  (+43 more)
tests/fixtures/sonarr/: command_list.json  episodes_213_yamada.json  episodes_228_bahamut.json  manualimport_bahamut.json  manualimport_yamada.json  parse_bahamut_s01e01.json  parse_crushru_abs14.json  parse_crushru_darkness01.json  parse_glimmerzu_abs14.json  parse_glimmerzu_eclipse01.json  parse_toloveru_abs14.json  parse_toloveru_darkness01.json  parse_yamada_s00e01.json  parse_yamada_s00e02.json  qualitydefinitions.json  queue.json  series_subset.json
tests/fixtures/torrent/: animetosho_page.html  rutracker_page.html
