[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "seadexarr"
version = "1.0.0"
description = "Automatically grab the best anime releases tagged on SeaDex for your Sonarr and Radarr libraries"
readme = "README.md"
requires-python = ">=3.13"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]

authors = [
    {name = "bbtufty"},
]
maintainers = [
    {name = "bbtufty"},
]

keywords = [
    "anime",
    "radarr",
    "seadex",
    "sonarr",
    "torrent",
]

classifiers = [
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 4 - Beta",

    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",

    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",

    "Topic :: Communications :: File Sharing",
    "Topic :: Multimedia :: Video",

    "Typing :: Typed",
]

dependencies = [
    "arrapi == 1.4.14",
    "beautifulsoup4 == 4.15.0",
    "httpx == 0.28.1",
    "platformdirs == 4.10.0",
    "pydantic == 2.13.4",
    "pynyaa == 3.0.0",
    "PyYAML == 6.0.3",
    "qbittorrent-api == 2026.6.1",
    "requests == 2.34.2",
    "rich == 15.0.0",
    "seadex == 0.7.2",
    "typer == 0.26.8",
    "urllib3>=2.7.0",
]

[project.scripts]
seadexarr = "seadexarr:seadexarr_cli"

[project.urls]
Homepage = "https://github.com/bbtufty/seadexarr"
Repository = "https://github.com/bbtufty/seadexarr"
"Bug Reports" = "https://github.com/bbtufty/seadexarr/issues"

# Dev tooling lives in PEP 735 dependency-groups (read natively by uv and pip),
# so it never ships as a runtime extra. Install with e.g. `uv sync --group dev`.
[dependency-groups]
build = [
    "build",
    "hatchling>=1.27.0",
]
static-analysis = [
    "basedpyright>=1.39.8",
    "pyrefly>=0.60.0",
    "ruff~=0.15.0",
]
test = [
    "diff-cover>=10.3.0",
    "hypothesis>=6.155.7",
    "pytest~=9.0",
    "pytest-cov>=7.1.0",
    "pytest-randomly>=4.1.0",
    "responses>=0.26.1",
]
dev = [
    "pre-commit",
    {include-group = "static-analysis"},
    {include-group = "test"},
]

# hatchling discovers config_sample.yml (and any other package data) under the
# package automatically, so no package-data wiring is needed.
[tool.hatch.build.targets.sdist]
include = [
    "/seadexarr",
    "/CHANGES.rst",
    "/LICENSE",
    "/README.md",
    "/pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["seadexarr"]

# Point the type checkers at the project virtualenv so third-party imports
# resolve (pyrefly reads these pyright-compatible settings too). Both the package
# AND the tests are gated at strict (0 findings) - each test module carries a
# ``# pyright: strict`` header, and the few that legitimately read a collaborator's
# private members for a white-box assertion carry a local
# ``# pyright: reportPrivateUsage=false`` with a justification. stubPath supplies
# local stubs for the one un-stubbed dependency (arrapi).
[tool.pyright]
typeCheckingMode = "strict"
stubPath = "stubs"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
# importlib import mode (no sys.path games), and fail loudly on an unregistered
# marker or a typo'd config key rather than silently ignoring it.
addopts = ["--strict-markers", "--strict-config", "--import-mode=importlib"]
markers = [
    "realdata: exercises gitignored real mapping/data files; skipped unless present",
    "real_data_dir: opts out of the autouse tmp data-dir isolation; reads/manages the real SEADEX_ARR_DATA_DIR",
]
# Warnings are errors: a silent resource leak (unclosed sqlite/log handle) or a
# dependency deprecation must fail the suite, not scroll past. The autouse
# close_leaked_handles fixture (tests/conftest.py) closes the known GC-timed
# leaks first. Add a targeted `ignore::Category:module` here only for a
# third-party warning we cannot fix - never to silence our own.
filterwarnings = ["error"]

# Branch coverage with a ratcheting floor pinned just under the current total
# (~78.8%); raise it as the untested I/O adapters / composition root get covered.
[tool.coverage.run]
branch = true
source = ["seadexarr"]
omit = ["seadexarr/__main__.py"]

[tool.coverage.report]
fail_under = 78
show_missing = true
skip_covered = true
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
ignore = [
    "E402",    # module-import-not-at-top-of-file
    "E501",    # line-too-long
    "E731",    # lambda-assignment
    "E741",    # ambiguous-variable-name
    "UP031",   # printf-string-formatting
    "UP036",   # outdated-version-block
    "B006",    # mutable-argument-default
    "B008",    # function-call-in-default-argument
    "B011",    # assert-false
    "B017",    # assert-raises-exception
    "B023",    # function-uses-loop-variable (false positives)
    "B028",    # no-explicit-stacklevel
    "B904",    # raise-without-from-inside-except
    "A005",    # stdlib-module-shadowing
    "C401",    # unnecessary-generator-set
    "C402",    # unnecessary-generator-dict
    "PIE790",  # unnecessary-placeholder
    "SIM102",  # collapsible-if
    "SIM108",  # if-else-block-instead-of-if-exp
    "SIM112",  # uncapitalized-environment-variables
    "SIM113",  # enumerate-for-loop
    "SIM114",  # if-with-same-arms
    "SIM115",  # open-file-with-context-handler
    "SIM117",  # multiple-with-statements
    "SIM223",  # expr-and-false
    "SIM300",  # yoda-conditions
    "TD001",   # invalid-todo-tag
    "TD002",   # missing-todo-author
    "TD003",   # missing-todo-link
    "PLC0415", # import-outside-top-level
    "PLE0604", # invalid-all-object (false positives)
    "PLE0643", # potential-index-error (false positives)
    "PLW0603", # global-statement
    "PLW1510", # subprocess-run-without-check
    "PLW1641", # eq-without-hash
    "PLW2901", # redefined-loop-name
    "RUF001",  # ambiguous-unicode-character-string
    "RUF012",  # mutable-class-default
    "RUF100",  # unused-noqa (flake8 has slightly different behavior)
    # Owned by `ruff format` (it adds trailing commas and normalises implicit string
    # concatenation), so enforcing them as lint rules fights the formatter. ruff's own
    # `format` conflict warning names exactly these two; the rest of COM/ISC stays on.
    "COM812",  # missing-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
]
select = [
    "E",      # pycodestyle Error
    "W",      # pycodestyle Warning
    "F",      # Pyflakes
    "I",      # isort
    "Q",      # flake8-quotes
    "N803",   # invalid-argument-name
    "N804",   # invalid-first-argument-name-for-class-method
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "C4",     # flake8-comprehensions
    "FA",     # flake8-future-annotations
    "ISC",    # flake8-implicit-str-concat
    "ICN003", # banned-import-from
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "RSE",    # flake8-raise
    "RET504", # unnecessary-assign
    "SIM",    # flake8-simplify
    "TID251", # banned-api
    "TD",     # flake8-todos
    "PLC",    # Pylint Convention
    "PLE",    # Pylint Error
    "PLW",    # Pylint Warning
    "RUF",    # Ruff-specific rules
]

[tool.ruff.lint.isort]
known-first-party = [
    "seadexarr",
]
relative-imports-order = "closest-to-furthest"

# Adapted from yt-dlp's single-quote convention to the double quotes this
# project already uses (also ruff's default), so flake8-quotes stays enabled
# without rewriting every string literal.
[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
multiline-quotes = "double"
inline-quotes = "double"
avoid-escape = false
