[build-system]
requires = ["hatchling>=1.27.0", "hatch-fancy-pypi-readme>=25.1.0"]
build-backend = "hatchling.build"

[project]
name = "pearlarr"
version = "1.0.5"
description = "Automatically grab the releases SeaDex recommends for the anime in your Sonarr and Radarr libraries"
# The readme is dynamic: the fancy-pypi-readme hook below pins the media URLs
# per version in the PyPI metadata. A static `readme` key here would make
# hatchling silently discard the hook's output - never restore it.
dynamic = ["readme"]
requires-python = ">=3.13"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]

authors = [
    {name = "bbtufty"},
]
maintainers = [
    {name = "trevinbrooks"},
]

keywords = [
    "anime",
    "radarr",
    "seadex",
    "sonarr",
    "torrent",
]

classifiers = [
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 4 - Beta",

    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: OS Independent",

    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",

    "Topic :: Communications :: File Sharing",
    "Topic :: Multimedia :: Video",

    "Typing :: Typed",
]

dependencies = [
    "beautifulsoup4 == 4.15.0",
    "filelock == 3.30.3",
    "httpx == 0.28.1",
    "platformdirs == 4.10.0",
    "pydantic == 2.13.4",
    "pynyaa == 3.0.0",
    "PyYAML == 6.0.3",
    "qbittorrent-api == 2026.7.0",
    "rich == 15.0.0",
    "seadex == 0.7.2",
    "truststore == 0.10.4",
    "typer == 0.27.0",
    # Transitive (qbittorrent-api -> requests -> urllib3). Floored for CVE currency.
    "urllib3>=2.7.0",
]

[project.scripts]
pearlarr = "pearlarr:pearlarr_cli"

# Keep in step with PROJECT_URL in pearlarr/paths.py (TOML can't import it).
[project.urls]
Homepage = "https://github.com/trevinbrooks/pearlarr"
Repository = "https://github.com/trevinbrooks/pearlarr"
Changelog = "https://github.com/trevinbrooks/pearlarr/blob/main/CHANGELOG.md"
"Bug Reports" = "https://github.com/trevinbrooks/pearlarr/issues"

# Dev tooling lives in PEP 735 dependency-groups (read natively by uv and pip),
# so it never ships as a runtime extra. Install with e.g. `uv sync --group dev`.
[dependency-groups]
build = [
    "build",
    "hatch-fancy-pypi-readme>=25.1.0",
    "hatchling>=1.27.0",
]
static-analysis = [
    "basedpyright>=1.39.8",
    "pyrefly>=1.1.1",
    "ruff~=0.15.0",
]
test = [
    "diff-cover>=10.3.0",
    "hypothesis>=6.155.7",
    "pytest~=9.0",
    "pytest-cov>=7.1.0",
    "pytest-randomly>=4.1.0",
    "respx>=0.23.1",
]
# Maintainer asset tooling (scripts/sample_grab_post.py renders the README
# screenshot headlessly). The browser itself is a one-time
# `uv run playwright install chromium`. In dev so the type gates over scripts/
# resolve the import.
assets = [
    "playwright>=1.61.0",
]
dev = [
    "pre-commit",
    {include-group = "assets"},
    {include-group = "static-analysis"},
    {include-group = "test"},
]

# The PyPI readme is the README with two rewrites baked into the distribution
# metadata only (the GitHub-rendered README is untouched):
#   1. Media URLs move from the assets repository's main branch (always the
#      newest release's media) to its immutable `vX.Y.Z` tag, so every PyPI
#      version's page keeps its own release's media forever.
#   2. Repo-relative links (docs/*.md, LICENSE, CHANGELOG.md, ...) become
#      absolute github.com/blob URLs pinned to the same tag. GitHub resolves
#      them relative to the repo root. PyPI has no such root, so unrewritten
#      they are dead links on the project page.
# Preview: `uvx hatch-fancy-pypi-readme pyproject.toml` (interpolates a dummy
# version). release.yaml's build job asserts both pins landed.
[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = 'raw\.githubusercontent\.com/trevinbrooks/pearlarr-assets/main/'
replacement = 'raw.githubusercontent.com/trevinbrooks/pearlarr-assets/v$HFPR_VERSION/'

# Rewrite repo-relative markdown link targets - anything not already absolute
# (http(s)://), an in-page anchor (#...), or a mailto: - to the version tag's
# blob/ URL. The capture keeps the path and any #anchor intact.
[[tool.hatch.metadata.hooks.fancy-pypi-readme.substitutions]]
pattern = '\]\((?!https?://|#|mailto:)([^)]+)\)'
replacement = '](https://github.com/trevinbrooks/pearlarr/blob/v$HFPR_VERSION/\1)'

# hatchling discovers config_sample.yml (and any other package data) under the
# package automatically, so no package-data wiring is needed.
[tool.hatch.build.targets.sdist]
include = [
    "/pearlarr",
    "/CHANGELOG.md",
    "/LICENSE",
    "/README.md",
    "/pyproject.toml",
]

[tool.hatch.build.targets.wheel]
packages = ["pearlarr"]

# Point the type checkers at the project virtualenv so third-party imports
# resolve (pyrefly reads these pyright-compatible settings too). Both the package
# AND the tests are gated at strict (0 findings) - each test module carries a
# ``# pyright: strict`` header, and the few that legitimately read a collaborator's
# private members for a white-box assertion carry a local
# ``# pyright: reportPrivateUsage=false`` with a justification.
[tool.pyright]
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"

[tool.pytest.ini_options]
testpaths = ["tests"]
# importlib import mode (no sys.path games), and fail loudly on an unregistered
# marker or a typo'd config key rather than silently ignoring it.
addopts = ["--strict-markers", "--strict-config", "--import-mode=importlib"]
markers = [
    "realdata: exercises gitignored real mapping/data files. Skipped unless present",
    "real_data_dir: opts out of the autouse tmp data-dir isolation. Reads/manages the real PEARLARR_DATA_DIR",
]
# Warnings are errors: a silent resource leak (unclosed sqlite/log handle) or a
# dependency deprecation must fail the suite, not scroll past. The autouse
# close_leaked_handles fixture (tests/conftest.py) closes the known GC-timed
# leaks first. Add a targeted `ignore::Category:module` here only for a
# third-party warning we cannot fix - never to silence our own.
filterwarnings = ["error"]

# Branch coverage with a ratcheting floor pinned just under the current total
# (~78.8%). Raise it as the untested I/O adapters / composition root get covered.
[tool.coverage.run]
branch = true
source = ["pearlarr"]
omit = ["pearlarr/__main__.py"]

[tool.coverage.report]
fail_under = 78
show_missing = true
skip_covered = true
exclude_also = [
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@(abc\\.)?abstractmethod",
    "\\.\\.\\.",
    "if __name__ == .__main__.:",
]

# Spell check (the docs job in build.yaml runs it over the whole tree).
# tests/fixtures holds captured arr payloads - real-world text stays byte-accurate.
[tool.codespell]
skip = "./.git,./.venv,./uv.lock,./tests/fixtures,./docs/assets,./htmlcov"
# strat = the hypothesis-strategy naming convention. unparseable = the house
# spelling (matches PARSEABLE_TRACKERS). disjointness = the set-theory term.
ignore-words-list = "strat,unparseable,disjointness"

[tool.ruff]
line-length = 120

[tool.ruff.lint]
# Preview is on ONLY to reach explicitly-selected preview rules (currently
# PLW1514). explicit-preview-rules keeps the letter-prefix selects from
# pulling in the whole unstable preview set.
preview = true
explicit-preview-rules = true
ignore = [
    "E402",    # module-import-not-at-top-of-file
    "E501",    # line-too-long
    "E731",    # lambda-assignment
    "E741",    # ambiguous-variable-name
    "UP031",   # printf-string-formatting
    "UP036",   # outdated-version-block
    "B006",    # mutable-argument-default
    "B008",    # function-call-in-default-argument
    "B011",    # assert-false
    "B017",    # assert-raises-exception
    "B023",    # function-uses-loop-variable (false positives)
    "B028",    # no-explicit-stacklevel
    "B904",    # raise-without-from-inside-except
    "A005",    # stdlib-module-shadowing
    "C401",    # unnecessary-generator-set
    "C402",    # unnecessary-generator-dict
    "PIE790",  # unnecessary-placeholder
    "SIM102",  # collapsible-if
    "SIM108",  # if-else-block-instead-of-if-exp
    "SIM112",  # uncapitalized-environment-variables
    "SIM113",  # enumerate-for-loop
    "SIM114",  # if-with-same-arms
    "SIM115",  # open-file-with-context-handler
    "SIM117",  # multiple-with-statements
    "SIM223",  # expr-and-false
    "SIM300",  # yoda-conditions
    "TD001",   # invalid-todo-tag
    "TD002",   # missing-todo-author
    "TD003",   # missing-todo-link
    # Docstring presence floor is modules/packages/classes only: leaf-function
    # gates under zero-suppressions manufacture ceremony. The rubric owns leaves.
    "D202",   # blank-line-after-function: the house style separates docstring from body
    "D102",    # undocumented-public-method
    "D103",    # undocumented-public-function
    "D105",    # undocumented-magic-method
    "D106",    # undocumented-public-nested-class
    "D107",    # undocumented-public-init
    "PLC0415", # import-outside-top-level
    "PLE0604", # invalid-all-object (false positives)
    "PLE0643", # potential-index-error (false positives)
    "PLW0603", # global-statement
    "PLW1510", # subprocess-run-without-check
    "PLW1641", # eq-without-hash
    "PLW2901", # redefined-loop-name
    "RUF001",  # ambiguous-unicode-character-string
    "RUF012",  # mutable-class-default
    # Owned by `ruff format` (it adds trailing commas and normalises implicit string
    # concatenation), so enforcing them as lint rules fights the formatter. ruff's own
    # `format` conflict warning names exactly these two. The rest of COM/ISC stays on.
    "COM812",  # missing-trailing-comma
    "ISC001",  # single-line-implicit-string-concatenation
]
select = [
    "E",      # pycodestyle Error
    "W",      # pycodestyle Warning
    "F",      # Pyflakes
    "I",      # isort
    "Q",      # flake8-quotes
    "N803",   # invalid-argument-name
    "N804",   # invalid-first-argument-name-for-class-method
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "COM",    # flake8-commas
    "C4",     # flake8-comprehensions
    "D",      # pydocstyle (google convention. Presence floor D100/D101/D104)
    "DOC202", # docstring-extraneous-returns (preview): Returns section with no return
    "DOC403", # docstring-extraneous-yields (preview): Yields section with no yield
    "DOC502", # docstring-extraneous-exception (preview): Raises names an unraised type
    "FA",     # flake8-future-annotations
    "ISC",    # flake8-implicit-str-concat
    "ICN003", # banned-import-from
    "LOG015", # root-logger-call: raw logging.* calls. tests/test_logging_ban.py owns the instance-call arm
    "PIE",    # flake8-pie
    "T20",    # flake8-print
    "RSE",    # flake8-raise
    "RET504", # unnecessary-assign
    "SIM",    # flake8-simplify
    "TID251", # banned-api
    "TD",     # flake8-todos
    "PLC",    # Pylint Convention
    "PLE",    # Pylint Error
    "PLW",    # Pylint Warning
    "PLW1514", # unspecified-encoding (preview): text I/O must pin utf-8, not the platform locale
    "RUF",    # Ruff-specific rules
]

# Owned HTTP rides the two shared httpx clients (arr_http / web_client). A
# fresh requests or urllib.request import would silently fork the stack again.
[tool.ruff.lint.flake8-tidy-imports.banned-api]
"requests" = { msg = "owned HTTP is httpx-only via the shared clients (Tier 2.6)" }
"urllib.request" = { msg = "use the shared web client (Tier 2.6)" }

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = [
    "pearlarr",
]
relative-imports-order = "closest-to-furthest"

# Adapted from yt-dlp's single-quote convention to the double quotes this
# project already uses (also ruff's default), so flake8-quotes stays enabled
# without rewriting every string literal.
[tool.ruff.lint.flake8-quotes]
docstring-quotes = "double"
multiline-quotes = "double"
inline-quotes = "double"
avoid-escape = false
